Fix hero overflow for sticky

--- a/style.css
+++ b/style.css
@@ -705,7 +705,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
+  overflow: visible;
   padding: 5rem 1.5rem 2rem;
 }
 
